# playlist-creator

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
playlist_creator/: __init__.py  config.py  main.py  md_to_m3u.py
tests/: test_config.py  test_main.py
